--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ venv/
 /ETL/config.yaml
 /ETL/etlEX.ipynb
 /home/ubuntu/Desktop/final_project/venv/bin/python3
+/ETL/.pytest_cache/
+/ETL/__pycache__
+/ETL/__pycache__/
+/ETL/logs/
